# budzhetnyk

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
migrations/: env.py
migrations/versions/: 654598a299f2_initial_schema.py
scripts/: backup.sh
src/: config.py  exceptions.py  main.py
src/bot/: states.py
src/bot/handlers/: expense.py  export.py  history.py  limit.py  start.py  stats.py  undo.py
src/bot/keyboards/: categories.py
src/bot/middlewares/: error.py  user.py
src/db/: models.py  session.py
src/db/repositories/: category_repo.py  expense_repo.py  user_repo.py
src/services/: categorizer.py  charts.py  exporter.py  parser.py  statistics.py
src/utils/: constants.py  formatters.py
tests/: conftest.py
tests/integration/: test_error_middleware.py  test_expense_flow.py  test_export_handler.py  test_history_handler.py  test_limit_handler.py  test_stats_handlers.py  test_undo_handler.py  test_user_middleware.py
tests/unit/: test_categorizer.py  test_category_repo.py  test_charts.py  test_expense_repo.py  test_exporter.py  test_formatters.py  test_models.py  test_parser.py  test_smoke.py  test_statistics.py  test_user_repo.py
